# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  db.py  html.py  parser.py  validator.py
page_analyzer/templates/: 404.html  layout.html  url.html
